1.0
===

- Fixed MR-409
  Introduced IMonoRailContainerEvents and IMonoRailConfigurationEvents that might be implemented by the
  HttpApplication subclass

- Fixed MR-412
  "When applying a layout attribute over an Action, layout doesn't render for the rendered view."

- Added FormHelper.TextFieldAutoComplete for combining AJAX AutoCompletion and FormHelper's round trip
  support.

- Added possibility to create labels in CheckboxLists.

- Applied James Curran's patch fixing MR-390
  "Adding AbstractHelper(IEngineContext) ctor"

- Applied Gauthier Segay's patch fixing MR-388 
  "There should be a way to preserve url query string arguments while using DiggStylePagination" 

- Applied Mike Nichols' patch adding two more events to the extension manager.

- Applied Felix Gartsman's patch fixing MR-387
  "ViewComponent selective caching"

- Applied Felix Gartsman's patch fixing MR-368
  "Added DetachedCriteria support to ARPaginationHelper/ARPaginableCriteria"

- Applied Gauthier Segay's patch fixing MR-384
  "GenericCustomPage<T> should rely on IEnumerable<T> instead of IList<T> for it's datasource"

- Applied James Curran's patch fixing MR-347
  "Cannot specify a default value for ViewComponentParameterAttribute"

- Applied Adam Tybor's patch fixing MR-370
  "RouteContext and Http Method Filtering for PatternRule"

- Applied Daniel Jin's patch fixing MR-372
  "add monorail configuration section to set the useExtensions option on DefaultUrlBuilder"

- Fixed MR-84
  "Nested classes are mapped wrongly to form fields"

- Applied Kode Khan's patch changing logger creation to use type instead of controller's name

- Implemented support for view component caching. Just use the attribute 
  ViewComponentDetails and its properties (cache, cachekeygenerator)

- Applied Michael Sanford's patch which adds image button support to FormHelper.

- Applied Rafael Teixeira's patch fixing MR-357
  "ViewEngineBase.IsTemplateForJSGeneration(String templateName) returns 